# ignis-gvc

./: LICENSE  README.md  flake.nix  meson.build
.github/workflows/: release.yaml
nix/: default.nix
subprojects/: gvc.wrap
